--- a/account/account-notifications.html
+++ b/account/account-notifications.html
@@ -675,7 +675,7 @@
                                                     marketing emails
                                                   </div>
                                                 </div>
-                                                <div class="become-a-host__count-action-wrapper">
+                                                <div class="ml-4">
                                                   <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="undefinedEMAIL-row-title"
@@ -2397,7 +2397,7 @@
                             Email
                           </div>
                         </div>
-                        <div class="become-a-host__count-action-wrapper">
+                        <div class="ml-4">
                           <button
                             aria-checked="true"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-title"
@@ -2446,7 +2446,7 @@
                             SMS
                           </div>
                         </div>
-                        <div class="become-a-host__count-action-wrapper">
+                        <div class="ml-4">
                           <button
                             aria-checked="false"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-title"
@@ -2476,7 +2476,7 @@
                             Phone calls
                           </div>
                         </div>
-                        <div class="become-a-host__count-action-wrapper">
+                        <div class="ml-4">
                           <button
                             aria-checked="false"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-title"
@@ -2506,7 +2506,7 @@
                             Browser notifications
                           </div>
                         </div>
-                        <div class="become-a-host__count-action-wrapper">
+                        <div class="ml-4">
                           <button
                             aria-checked="false"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-title"
