--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -2103,7 +2103,7 @@
                                           </div>
                                         </div>
                                         <div class="flex-items-center">
-                                          <div class="become-a-host__count-action-wrapper"><input aria-labelledby="sms-row-title"
+                                          <div class="ml-4"><input aria-labelledby="sms-row-title"
                                               aria-describedby="sms-row-subtitle" id="sms-row-radio-button"
                                               class="radio__button-active" type="radio" value="TEXT" checked=""></div>
                                         </div>
@@ -2138,7 +2138,7 @@
                                           </div>
                                         </div>
                                         <div class="flex-items-center">
-                                          <div class="become-a-host__count-action-wrapper"><input aria-labelledby="whatsapp-row-title"
+                                          <div class="ml-4"><input aria-labelledby="whatsapp-row-title"
                                               aria-describedby="whatsapp-row-subtitle" id="whatsapp-row-radio-button"
                                               class="_83s1a2" type="radio" value="WHATSAPP"></div>
                                         </div>
@@ -2173,7 +2173,7 @@
                                           </div>
                                         </div>
                                         <div class="flex-items-center">
-                                          <div class="become-a-host__count-action-wrapper"><input aria-labelledby="phone_call-row-title"
+                                          <div class="ml-4"><input aria-labelledby="phone_call-row-title"
                                               aria-describedby="phone_call-row-subtitle"
                                               id="phone_call-row-radio-button" class="_83s1a2" type="radio"
                                               value="CALL"></div>
@@ -5489,7 +5489,7 @@
                                           </div>
                                         </div>
                                         <div class="flex-items-center">
-                                          <div class="become-a-host__count-action-wrapper"><input aria-labelledby="sms-row-title"
+                                          <div class="ml-4"><input aria-labelledby="sms-row-title"
                                               aria-describedby="sms-row-subtitle" id="sms-row-radio-button"
                                               class="radio__button-active" type="radio" value="TEXT" checked=""></div>
                                         </div>
@@ -5524,7 +5524,7 @@
                                           </div>
                                         </div>
                                         <div class="flex-items-center">
-                                          <div class="become-a-host__count-action-wrapper"><input aria-labelledby="whatsapp-row-title"
+                                          <div class="ml-4"><input aria-labelledby="whatsapp-row-title"
                                               aria-describedby="whatsapp-row-subtitle" id="whatsapp-row-radio-button"
                                               class="_83s1a2" type="radio" value="WHATSAPP"></div>
                                         </div>
@@ -5559,7 +5559,7 @@
                                           </div>
                                         </div>
                                         <div class="flex-items-center">
-                                          <div class="become-a-host__count-action-wrapper"><input aria-labelledby="phone_call-row-title"
+                                          <div class="ml-4"><input aria-labelledby="phone_call-row-title"
                                               aria-describedby="phone_call-row-subtitle"
                                               id="phone_call-row-radio-button" class="_83s1a2" type="radio"
                                               value="CALL"></div>
