--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -192,7 +192,7 @@
                                       <div class="_8u4omh">Guests</div>
                                     </div>
                                   </div>
-                                  <div class="become-a-host__count-action-wrapper">
+                                  <div class="ml-4">
                                     <div
                                       class="counter"
                                       id="stepper-item--0-stepper"
@@ -289,7 +289,7 @@
                                       <div class="_8u4omh">Beds</div>
                                     </div>
                                   </div>
-                                  <div class="become-a-host__count-action-wrapper">
+                                  <div class="ml-4">
                                     <div
                                       class="counter"
                                       id="stepper-item--1-stepper"
@@ -386,7 +386,7 @@
                                       <div class="_8u4omh">Bedrooms</div>
                                     </div>
                                   </div>
-                                  <div class="become-a-host__count-action-wrapper">
+                                  <div class="ml-4">
                                     <div
                                       class="counter"
                                       id="stepper-item--2-stepper"
@@ -483,7 +483,7 @@
                                       <div class="_8u4omh">Bathrooms</div>
                                     </div>
                                   </div>
-                                  <div class="become-a-host__count-action-wrapper">
+                                  <div class="ml-4">
                                     <div
                                       class="counter"
                                       id="stepper-item--3-stepper"
