--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -225,7 +225,7 @@
                                         Security camera(s)
                                       </div>
                                     </div>
-                                    <div class="become-a-host__count-action-wrapper">
+                                    <div class="ml-4">
                                       <span class="explore-filter-menu__list-content"
                                         ><input
                                           type="checkbox"
@@ -287,7 +287,7 @@
                                         Weapons
                                       </div>
                                     </div>
-                                    <div class="become-a-host__count-action-wrapper">
+                                    <div class="ml-4">
                                       <span class="explore-filter-menu__list-content"
                                         ><input
                                           type="checkbox"
@@ -328,7 +328,7 @@
                                         Dangerous animals
                                       </div>
                                     </div>
-                                    <div class="become-a-host__count-action-wrapper">
+                                    <div class="ml-4">
                                       <span class="explore-filter-menu__list-content"
                                         ><input
                                           type="checkbox"
