--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -548,7 +548,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="become-a-host__count-action-wrapper">
+                                  <div class="ml-4">
                                     <span class="explore-filter-menu__list-content"
                                       ><input
                                         type="checkbox"
