--- a/help/help.html
+++ b/help/help.html
@@ -1811,7 +1811,7 @@
                                                                           </div>
                                                                         </div>
                                                                         <div
-                                                                          class="_sbaj1v"
+                                                                          class="ml-4"
                                                                         >
                                                                           <svg
                                                                             viewBox="0 0 16 16"
@@ -1973,7 +1973,7 @@
                                                                           </div>
                                                                         </div>
                                                                         <div
-                                                                          class="_sbaj1v"
+                                                                          class="ml-4"
                                                                         >
                                                                           <svg
                                                                             viewBox="0 0 16 16"
@@ -2184,7 +2184,7 @@
                                                                   </div>
                                                                 </div>
                                                                 <div
-                                                                  class="_sbaj1v"
+                                                                  class="ml-4"
                                                                 >
                                                                   <svg
                                                                     viewBox="0 0 16 16"
@@ -2316,7 +2316,7 @@
                                                                   </div>
                                                                 </div>
                                                                 <div
-                                                                  class="_sbaj1v"
+                                                                  class="ml-4"
                                                                 >
                                                                   <svg
                                                                     viewBox="0 0 16 16"
@@ -2476,7 +2476,7 @@
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="_sbaj1v"
+                                                                class="ml-4"
                                                               >
                                                                 <svg
                                                                   viewBox="0 0 16 16"
@@ -2607,7 +2607,7 @@
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="_sbaj1v"
+                                                                class="ml-4"
                                                               >
                                                                 <svg
                                                                   viewBox="0 0 16 16"
