--- a/landing-pages/articles.html
+++ b/landing-pages/articles.html
@@ -1191,7 +1191,7 @@
                               </picture>
                              </div>
                              <div class="cell-middle">
-                              <div class="_1mqc21n"><span class="_28eszc">Written by</span><span class="_1l65hi7" aria-describedby="contributor-0-description">Stephanie Granada</span></div>
+                              <div class="ml-4"><span class="_28eszc">Written by</span><span class="_1l65hi7" aria-describedby="contributor-0-description">Stephanie Granada</span></div>
                              </div>
                             </div>
                             <div id="contributor-0-description" class="_q75xogi">
