--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -458,7 +458,7 @@
                                                   </path>
                                                 </svg>
                                               </div>
-                                              <div class="become-a-host__count-action-wrapper">
+                                              <div class="ml-4">
                                                 <div class="_1qsawv5">
                                                   Rinaldo is a Superhost
                                                 </div>
@@ -484,7 +484,7 @@
                                                   </path>
                                                 </svg>
                                               </div>
-                                              <div class="become-a-host__count-action-wrapper">
+                                              <div class="ml-4">
                                                 <div class="_1qsawv5">
                                                   Great check-in experience
                                                 </div>
@@ -509,7 +509,7 @@
                                                   </path>
                                                 </svg>
                                               </div>
-                                              <div class="become-a-host__count-action-wrapper">
+                                              <div class="ml-4">
                                                 <div class="_1qsawv5">
                                                   Dive right in
                                                 </div>
