--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -1729,7 +1729,7 @@
                                                   </svg>
                                                 </div>
                                                 <div
-                                                  class="become-a-host__count-action-wrapper"
+                                                  class="ml-4"
                                                 >
                                                   <div class="_1qsawv5">
                                                     Rinaldo is a Superhost
@@ -1763,7 +1763,7 @@
                                                   </svg>
                                                 </div>
                                                 <div
-                                                  class="become-a-host__count-action-wrapper"
+                                                  class="ml-4"
                                                 >
                                                   <div class="_1qsawv5">
                                                     Great check-in experience
@@ -1796,7 +1796,7 @@
                                                   </svg>
                                                 </div>
                                                 <div
-                                                  class="become-a-host__count-action-wrapper"
+                                                  class="ml-4"
                                                 >
                                                   <div class="_1qsawv5">
                                                     Dive right in
