--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -17758,7 +17758,7 @@
                                             Art and culture
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
@@ -17805,7 +17805,7 @@
                                             Entertainment
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
@@ -17852,7 +17852,7 @@
                                             Food and drink
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
@@ -17899,7 +17899,7 @@
                                             Sports
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
@@ -18441,7 +18441,7 @@
                                             English
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
@@ -18488,7 +18488,7 @@
                                             French
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
@@ -18535,7 +18535,7 @@
                                             German
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
@@ -18750,7 +18750,7 @@
                                             Starts before 12pm
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
@@ -18804,7 +18804,7 @@
                                             Starts after noon
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
@@ -18858,7 +18858,7 @@
                                             Starts after 5pm
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <span
                                             class="explore-filter-menu__list-content"
                                           >
