--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -339,7 +339,7 @@
                                               </path>
                                             </svg></span></button></div>
                                     </span></div>
-                                  <div class="_1mqc21n" data-testid="c3pi.toggle.details">
+                                  <div class="ml-4" data-testid="c3pi.toggle.details">
                                     <div class="_1y6xiyp"><button data-panel-details-sm="#thread_details_panel_1"
                                         aria-label="Details" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                             viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -1084,7 +1084,7 @@
                                               </path>
                                             </svg></span></button></div>
                                     </span></div>
-                                  <div class="_1mqc21n" data-testid="c3pi.toggle.details">
+                                  <div class="ml-4" data-testid="c3pi.toggle.details">
                                     <div class="_1y6xiyp"><button data-panel-details-sm="#thread_details_panel_2"
                                         aria-label="Details" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                             viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
