--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -3351,7 +3351,7 @@
                                                 "
                                               >
                                                 <div class="_1vjikx5" style="width: 100%;">
-                                                  <div class="become-a-host__count-action-wrapper" style="width: 100%;">
+                                                  <div class="ml-4" style="width: 100%;">
                                                     <div class="_1qsawv5" style="width: 100%;">
                                                       <span aria-busy="true" style="display: block; height: 20px; width: 45%; background-color: white; border-radius: 4px;">
                                                         <span
@@ -3371,7 +3371,7 @@
                                                   </div>
                                                 </div>
                                                 <div class="_1vjikx5" style="width: 100%;">
-                                                  <div class="become-a-host__count-action-wrapper" style="width: 100%;">
+                                                  <div class="ml-4" style="width: 100%;">
                                                     <div class="_1qsawv5" style="width: 100%;">
                                                       <span aria-busy="true" style="display: block; height: 20px; width: 45%; background-color: white; border-radius: 4px;">
                                                         <span
@@ -3391,7 +3391,7 @@
                                                   </div>
                                                 </div>
                                                 <div class="_1vjikx5" style="width: 100%;">
-                                                  <div class="become-a-host__count-action-wrapper" style="width: 100%;">
+                                                  <div class="ml-4" style="width: 100%;">
                                                     <div class="_1qsawv5" style="width: 100%;">
                                                       <span aria-busy="true" style="display: block; height: 20px; width: 45%; background-color: white; border-radius: 4px;">
                                                         <span
