--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -556,7 +556,7 @@
                                               </path>
                                             </svg></span></button></div>
                                     </span></div>
-                                  <div class="_1mqc21n" data-testid="c3pi.toggle.details">
+                                  <div class="ml-4" data-testid="c3pi.toggle.details">
                                     <div class="_1y6xiyp"><button data-panel-details-sm="#thread_details_panel_1"
                                         aria-label="Details" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                             viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -1301,7 +1301,7 @@
                                               </path>
                                             </svg></span></button></div>
                                     </span></div>
-                                  <div class="_1mqc21n" data-testid="c3pi.toggle.details">
+                                  <div class="ml-4" data-testid="c3pi.toggle.details">
                                     <div class="_1y6xiyp"><button data-panel-details-sm="#thread_details_panel_2"
                                         aria-label="Details" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                             viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -2374,7 +2374,7 @@
                                             </path>
                                           </svg></span></button></div>
                                   </span></div>
-                                <div class="_1mqc21n" data-testid="c3pi.toggle.details"><button data-button="close"
+                                <div class="ml-4" data-testid="c3pi.toggle.details"><button data-button="close"
                                     data-testid="inbox-thread-detail-toggle-button" type="button" class="_43he2wy"><span
                                       class="_j1kt73">Get
                                       details</span></button></div><button type="button" class="_bmkfr4f">Skip to Last
@@ -3124,7 +3124,7 @@
                                             </path>
                                           </svg></span></button></div>
                                   </span></div>
-                                <div class="_1mqc21n" data-testid="c3pi.toggle.details"><button data-button="close"
+                                <div class="ml-4" data-testid="c3pi.toggle.details"><button data-button="close"
                                     data-testid="inbox-thread-detail-toggle-button" type="button" class="_43he2wy"><span
                                       class="_j1kt73">Get
                                       details</span></button></div><button type="button" class="_bmkfr4f">Skip to Last
@@ -3343,7 +3343,7 @@
                                             </path>
                                           </svg></span></button></div>
                                   </span></div>
-                                <div class="_1mqc21n" data-testid="c3pi.toggle.details"><button data-button="close"
+                                <div class="ml-4" data-testid="c3pi.toggle.details"><button data-button="close"
                                     data-testid="inbox-thread-detail-toggle-button" type="button" class="_43he2wy"><span
                                       class="_j1kt73">Get
                                       details</span></button></div><button type="button" class="_bmkfr4f">Skip to Last
