--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -574,7 +574,7 @@
                                                       Current credit balance
                                                     </div>
                                                   </div>
-                                                  <div class="become-a-host__count-action-wrapper">
+                                                  <div class="ml-4">
                                                     <div class="resolution__reservation-continer-text">
                                                       $0.00
                                                     </div>
@@ -631,7 +631,7 @@
                                                       Your coupons
                                                     </div>
                                                   </div>
-                                                  <div class="become-a-host__count-action-wrapper">
+                                                  <div class="ml-4">
                                                     <div class="resolution__reservation-continer-text">0</div>
                                                   </div>
                                                 </div>
@@ -1347,7 +1347,7 @@
                                                       Current credit balance
                                                     </div>
                                                   </div>
-                                                  <div class="become-a-host__count-action-wrapper">
+                                                  <div class="ml-4">
                                                     <div class="resolution__reservation-continer-text">
                                                       $0.00
                                                     </div>
@@ -1404,7 +1404,7 @@
                                                       Your coupons
                                                     </div>
                                                   </div>
-                                                  <div class="become-a-host__count-action-wrapper">
+                                                  <div class="ml-4">
                                                     <div class="resolution__reservation-continer-text">0</div>
                                                   </div>
                                                 </div>
