--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -206,7 +206,7 @@
                                             "></div>
                                         </div>
                                       </div>
-                                      <div class="_sbaj1v">
+                                      <div class="ml-4">
                                         <div class="_1ozrncp">
                                           Cooking Deep Fried Bright Orange
                                           Battered Eggs
@@ -278,7 +278,7 @@
                                               "></div>
                                           </div>
                                         </div>
-                                        <div class="_sbaj1v">
+                                        <div class="ml-4">
                                           <div class="_1u2f1b1i">Online</div>
                                           <div class="_153x66u">
                                             Cooking Deep Fried Bright Orange
