--- a/submission/basics-error.html
+++ b/submission/basics-error.html
@@ -793,7 +793,7 @@
                                         have a confirmation code
                                       </div>
                                     </div>
-                                    <div class="become-a-host__count-action-wrapper">
+                                    <div class="ml-4">
                                       <button
                                         aria-checked="false"
                                         aria-labelledby="partner-switch-row-title"
