--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1141,7 +1141,7 @@
                                           Parents can bring kids under 2 years
                                         </div>
                                       </div>
-                                      <div class="become-a-host__count-action-wrapper">
+                                      <div class="ml-4">
                                         <span class="explore-filter-menu__list-content"
                                           ><input
                                             aria-labelledby="guest_requirements_infant_can_attend-row-title"
@@ -1194,7 +1194,7 @@
                                                 guests on your experience.
                                               </div>
                                             </div>
-                                            <div class="become-a-host__count-action-wrapper">
+                                            <div class="ml-4">
                                               <span class="explore-filter-menu__list-content"
                                                 ><input
                                                   aria-labelledby="Tag:4804-row-title"
@@ -1241,7 +1241,7 @@
                                                 equipment you provide.
                                               </div>
                                             </div>
-                                            <div class="become-a-host__count-action-wrapper">
+                                            <div class="ml-4">
                                               <span class="explore-filter-menu__list-content"
                                                 ><input
                                                   aria-labelledby="Tag:4802-row-title"
@@ -1278,7 +1278,7 @@
                                                 Other accessibility features
                                               </div>
                                             </div>
-                                            <div class="become-a-host__count-action-wrapper">
+                                            <div class="ml-4">
                                               <span class="explore-filter-menu__list-content"
                                                 ><input
                                                   aria-labelledby="Tag:4805-row-title"
