--- a/submission/review.html
+++ b/submission/review.html
@@ -1300,7 +1300,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="become-a-host__count-action-wrapper">
+                                  <div class="ml-4">
                                     <span class="explore-filter-menu__list-content"
                                       ><input
                                         name="info_is_compliant_with_all_laws"
@@ -1366,7 +1366,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="become-a-host__count-action-wrapper">
+                                  <div class="ml-4">
                                     <span class="explore-filter-menu__list-content"
                                       ><input
                                         name="info_is_compliant_with_airbnb_policies"
