--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -653,7 +653,7 @@
                                                   </path>
                                                 </svg>
                                               </div>
-                                              <div class="become-a-host__count-action-wrapper">
+                                              <div class="ml-4">
                                                 <div class="_1qsawv5">
                                                   Rinaldo is a Superhost
                                                 </div>
@@ -679,7 +679,7 @@
                                                   </path>
                                                 </svg>
                                               </div>
-                                              <div class="become-a-host__count-action-wrapper">
+                                              <div class="ml-4">
                                                 <div class="_1qsawv5">
                                                   Great check-in experience
                                                 </div>
@@ -704,7 +704,7 @@
                                                   </path>
                                                 </svg>
                                               </div>
-                                              <div class="become-a-host__count-action-wrapper">
+                                              <div class="ml-4">
                                                 <div class="_1qsawv5">
                                                   Dive right in
                                                 </div>
@@ -6014,7 +6014,7 @@
                                                     </path>
                                                   </svg>
                                                 </div>
-                                                <div class="become-a-host__count-action-wrapper">
+                                                <div class="ml-4">
                                                   <div class="_1qsawv5">
                                                     Rinaldo is a Superhost
                                                   </div>
@@ -6041,7 +6041,7 @@
                                                     </path>
                                                   </svg>
                                                 </div>
-                                                <div class="become-a-host__count-action-wrapper">
+                                                <div class="ml-4">
                                                   <div class="_1qsawv5">
                                                     Great check-in experience
                                                   </div>
@@ -6066,7 +6066,7 @@
                                                     </path>
                                                   </svg>
                                                 </div>
-                                                <div class="become-a-host__count-action-wrapper">
+                                                <div class="ml-4">
                                                   <div class="_1qsawv5">
                                                     Dive right in
                                                   </div>
@@ -13174,7 +13174,7 @@
                                                                               </svg></span></button></div>
                                                                         <div class="_1sl8tba"><button type="button"
                                                                             class="btn-link-small">Clear dates</button><span
-                                                                            class="_sbaj1v"><button data-button="close"
+                                                                            class="ml-4"><button data-button="close"
                                                                               data-testid="availability-calendar-save"
                                                                               type="button"
                                                                               class="btn-dark-small">Close</button></span>
@@ -27719,7 +27719,7 @@
                             It’s inaccurate or incorrect
                           </div>
                         </div>
-                        <div class="_1mqc21n">
+                        <div class="ml-4">
                           <input aria-labelledby="inaccurate_incorrect-row-title"
                             aria-describedby="inaccurate_incorrect-row-subtitle"
                             id="inaccurate_incorrect-row-radio-button" class="radio__button" type="radio"
@@ -27736,7 +27736,7 @@
                             It’s not a real place to stay
                           </div>
                         </div>
-                        <div class="_1mqc21n">
+                        <div class="ml-4">
                           <input aria-labelledby="not_real_place-row-title"
                             aria-describedby="not_real_place-row-subtitle" id="not_real_place-row-radio-button"
                             class="radio__button" type="radio" value="not_real_place" />
@@ -27750,7 +27750,7 @@
                         <div class="_gfomxi">
                           <div id="scam-row-title" class="_gw4xx4">It’s a scam</div>
                         </div>
-                        <div class="_1mqc21n">
+                        <div class="ml-4">
                           <input aria-labelledby="scam-row-title" aria-describedby="scam-row-subtitle"
                             id="scam-row-radio-button" class="radio__button" type="radio" value="scam" />
                         </div>
@@ -27763,7 +27763,7 @@
                         <div class="_gfomxi">
                           <div id="offensive-row-title" class="_gw4xx4">It’s offensive</div>
                         </div>
-                        <div class="_1mqc21n">
+                        <div class="ml-4">
                           <input aria-labelledby="offensive-row-title" aria-describedby="offensive-row-subtitle"
                             id="offensive-row-radio-button" class="radio__button" type="radio" value="offensive" />
                         </div>
@@ -27778,7 +27778,7 @@
                             It’s something else
                           </div>
                         </div>
-                        <div class="_1mqc21n">
+                        <div class="ml-4">
                           <input aria-labelledby="something_else-row-title"
                             aria-describedby="something_else-row-subtitle" id="something_else-row-radio-button"
                             class="radio__button" type="radio" value="something_else" />
