--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1212,7 +1212,7 @@
                                         have a confirmation code
                                       </div>
                                     </div>
-                                    <div class="become-a-host__count-action-wrapper">
+                                    <div class="ml-4">
                                       <button
                                         aria-checked="false"
                                         aria-labelledby="partner-switch-row-title"
