--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1296,7 +1296,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                             Ex: My living room or backyard
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <input
                                             aria-labelledby="info_where_are_you_broadcasting-Indoors or on my personal property-row-title"
                                             aria-describedby="info_where_are_you_broadcasting-Indoors or on my personal property-row-subtitle"
@@ -1336,7 +1336,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                             attraction
                                           </div>
                                         </div>
-                                        <div class="become-a-host__count-action-wrapper">
+                                        <div class="ml-4">
                                           <input
                                             aria-labelledby="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-title"
                                             aria-describedby="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-subtitle"
